@@ -1,2 +1,2 @@
 set SCRIPT_DIR=%~dp0
-java -Xmx1024M -Xss2M -jar "%SCRIPT_DIR%sbt-launch.jar" %*
+java -Xmx1024M -XX:MaxPermSize=512M -Xss2M -jar "%SCRIPT_DIR%sbt-launch.jar" %*
